removed the span classes

--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
                         <input type="text" id="month" name="MN" value=""><span class="label">Month</span><br><br>
                         <input type="text" id="year" name="YY" value=""><span class="label">Year</span><br><br>
                         <p class="label">Please select your gender</p>
-                        <input type="radio" name="gender1" id="male"><span class="label">Male</span><br><br>
-                        <input type="radio" name="gender2" id="female"><span class="label">Female</span><br><br>
+                        <input type="radio" name="gender" value="male"><span class="label">Male</span><br><br>
+                        <input type="radio" name="gender" value="female"><span class="label">Female</span><br><br>
                         <button class="btn btn-primary" type="submit">Submit</button>
                     </form>
                 </div>
