Added a p element to the body tag.

--- a/index.html
+++ b/index.html
@@ -27,11 +27,15 @@
                 <input type="text" id="century" name="CC" value="">
                 <p><strong>Year</strong></p><br>
                 <input type="text" id="year" name="YY" value="">
-                <p class="label">Please select your gender</p>
+                <p>Please select your gender</p>
                 <input type="radio" name="gender" value="male"><span class="label">Male</span><br><br>
                 <input type="radio" name="gender" value="female"><span class="label">Female</span><br><br>
                 <button class="btn btn-primary" type="submit">Submit</button>
             </form>
+        </div>
+        <div class="names">
+            Akan names are derived from Ghanian culture. Frequently in Ghana, children are given their first name as
+                a 'day name' which corresponds to the day in the week they were born.</p>
         </div>
 
 
